# adaptive-prompt-engine

./: .env.example  .gitignore  CODEBASE_INFO.md  README.md  main.py  pyproject.toml  requirements.txt
api/: models.py  server.py
cache/: knowledge_base.py  query_log.py  semantic_cache.py  session_store.py
core/: complexity_estimator.py  model_router.py
dashboard/: index.html
evaluator/: confidence_evaluator.py  llm_judge.py
experiments/: benchmark_queries.py  rule_based_classifier.py  run_benchmark.py  run_rule_based_benchmark.py
experiments/results/: benchmark_20260618_043923.csv  gemma-no-cache.txt  gemma3_output.txt  gpt-oss-120b_output.txt  gpt-oss-no-cache.txt  gpt_oss_120b_benchmark.csv  groq_llama_benchmark.csv  llama_output.txt  nemotron-3-ultra-550b-a55b_benchmark.csv  nemotron-3-ultra-550b-a55b_output.txt  nemotron-no-cache.txt  nvidia_benchmark.csv  nvidia_gemma_3n_benchmark.csv  nvidia_gemma_3n_benchmark_no_cache.csv  nvidia_gpt_oss_120b_benchmark_no_cache.csv  nvidia_nemotron_benchmark_no_cache.csv  nvidia_output.txt  rule_based_benchmark_20260709_090048.csv  rule_based_benchmark_20260709_091413.csv  rule_based_output.txt
handlers/: base_handler.py  self_consistency_handler.py
llm/: llm_client.py
logs/: README.md
strategies/: adaptive_prompt.py  base_strategy.py  rag_strategy.py  self_consistency.py  tool_use_strategy.py
tests/: conftest.py  test_factory.py  test_handlers.py  test_strategies.py
