[project]
name = "adaptive-prompt-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "google-genai>=1.0.0",
    "groq>=1.5.0",
    "ipykernel>=7.3.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "pandas>=3.0.3",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "uvicorn>=0.29.0",
]
